--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -7,3 +7,5 @@ resources:
   - ./devops-codespace/selenium-node-firefox.yaml
   - ./devops-codespace/selenium-node-chrome.yaml
   - ./devops-codespace/sonarqube.yaml
+
+  lkjsd
